[package]
name = "persistence"
description = "A resizable, mutable array type implemented on top of mmap, providing persistence for arrays of data in memory."
license = "ISC"
readme = "README.md"
repository = "https://github.com/ctsrc/persistence"
version = "0.0.6"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
keywords = ["data-oriented-design"]
edition = "2018"

[dependencies]
memmap = "0.7"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
memoffset = "0.9"
